--- a/src/inventoryapp/static/styles.css
+++ b/src/inventoryapp/static/styles.css
@@ -19,3 +19,16 @@
 	text-align: center;
 
 }
+
+.error-flash {
+	background-color: #FB9898;
+	width:100%;
+	text-decoration: none;
+
+}
+
+.error-flash li {
+	list-style-type: none;
+	text-align: center;
+
+}
