--- a/src/inventoryapp/templates/mask_detail.html
+++ b/src/inventoryapp/templates/mask_detail.html
@@ -3,6 +3,7 @@
 {% include "header.html" %}
 <div class="row text-center">
     <div class="col-md-12 padding-top">
+        {% if current_user.is_authenticated() %}
         <a href="{{ url_for('add_cards', mask_id=mask.id) }}" class="btn btn-default" id="add_cards">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add
         </a>
@@ -14,16 +15,10 @@
         <a href="{{ url_for('edit_mask', mask_id=mask.id) }}" class="btn btn-default" id="edit_mask">
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Mask
         </a>
+        {% endif %}
     </div>
-    <!--
-    <div class="col-md-1 padding-top">
-
-    </div>
-    <div class="col-md-1 col-md-offset-8 padding-top">
-
-    </div>
-    -->
 </div>
+<br>
 <div class="row">
     <div class="col-md-8  col-md-offset-2">
         <div class="panel panel-default">
