Update templates with user name and truncate

--- a/src/inventoryapp/templates/header.html
+++ b/src/inventoryapp/templates/header.html
@@ -48,5 +48,7 @@
 <div class="row text-center">
     {% if mask is defined %}
         <h1>{{ mask.name }}</h1>
+    {% else %}
+        <h1>Card Inventory</h1>
     {% endif %}
 </div>
