Implement transfer cards (to trash)

--- a/src/inventoryapp/templates/transfer_cards.html
+++ b/src/inventoryapp/templates/transfer_cards.html
@@ -12,6 +12,7 @@
             <div class="col-md-6 padding-top">
                 <dl>
                     {{ render_field(form.quantity) }}
+                    {{ render_field(form.reason) }}
                     {{ render_field(form.destination) }}
                 </dl>
             </div>
