--- a/src/inventoryapp/templates/inventory.html
+++ b/src/inventoryapp/templates/inventory.html
@@ -4,11 +4,11 @@
 <div class="row text-center">
     <div class="col-md-12 padding-top">
         {% if current_user.is_authenticated() %}
-        <a href="{{ url_for('new_mask') }}" class="btn btn-default" id="new_mask">
+        <a href="{{ url_for('new_category') }}" class="btn btn-default" id="new_mask">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>New Mask
         </a>
         <!--
-        <a href="{{ url_for('empty_trash') }}" class="btn btn-default" id="empty_trash">
+        <a href="{{""" url_for('empty_trash') """}}" class="btn btn-default" id="empty_trash">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Empty Trash
         </a>
         -->
