Adjust styling of flash msgs

--- a/src/inventoryapp/templates/edit_recipe.html
+++ b/src/inventoryapp/templates/edit_recipe.html
@@ -1,6 +1,6 @@
-{% extends "main.html" %}
+{% extends "_main.html" %}
 {% block content %}
-{% include "header.html" %}
+{% include "_header.html" %}
 {% from "_formhelpers.html" import render_field %}
 
 
