--- a/src/inventoryapp/templates/_header.html
+++ b/src/inventoryapp/templates/_header.html
@@ -16,7 +16,7 @@
                 {% if current_user.is_authenticated() %}
                 Signed in as {{current_user.name}} (<a href="{{ url_for('logout') }}">Logout</a>)
                 {% else %}
-                <a href="{{ url_for('login') }}">Sign in with Google
+                <a href="{{ url_for('login') }}">Sign in with Google</a>
                 {% endif %}
                 </p></li>
             </ul>
@@ -28,26 +28,3 @@
         </div>
     </div>
 </nav>
-
-<div class = 'flash'>
-    {% with messages = get_flashed_messages(category_filter=["message"]) %}
-      {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
-</div>
-<div class = 'error-flash'>
-    {% with messages = get_flashed_messages(category_filter=["error"]) %}
-      {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
-</div>
