--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -4,13 +4,15 @@
 
 
 <div class="container-fluid">
+
     <div class="row">
 
         {% include "_sidemenu.html" %}
 
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Dashboard</h1>
 
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            {% include "_flash_messages.html" %}
+            <h1 class="page-header">Dashboard</h1>
             {% include "_featured.html" %}
 
             <h2 class="sub-header">{{subtitle}}</h2>
