Minor presentatition changes

--- a/src/inventoryapp/templates/edit_recipe.html
+++ b/src/inventoryapp/templates/edit_recipe.html
@@ -8,7 +8,7 @@
     <form action="{{ url_for('edit_mask', mask_id=mask.id)}}" method=post>
     {{ form.hidden_tag() }}
         <div class="row">
-            <div class="subtitle"><h3>Edit Mask</h3></div>
+            <div class="subtitle"><h3>Edit</h3></div>
             <br>
             <div class="col-md-6 padding-top">
                 <dl>
