--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -12,7 +12,7 @@
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             {% include "_flash_messages.html" %}
-            <h1 class="page-header">Dashboard</h1>
+            <h1 class="page-header">Recipe Catalog</h1>
             {% include "_featured.html" %}
 
             <h2 class="sub-header">{{subtitle}}</h2>
