--- a/src/inventoryapp/templates/new_recipe.html
+++ b/src/inventoryapp/templates/new_recipe.html
@@ -11,7 +11,7 @@
             <div class="subtitle"><h3>Add Recipe</h3></div>
             <div class="col-md-6 padding-top">
                 <dl>
-                    {{ render_field(form.item_name) }}
+                    {{ render_field(form.name) }}
                     {{ render_field(form.desc) }}
                     {{ render_field(form.category) }}
                 </dl>
