--- a/src/inventoryapp/templates/_header.html
+++ b/src/inventoryapp/templates/_header.html
@@ -1,3 +1,5 @@
+{% extends "_main.html" %}
+{% block main_content %}
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -28,3 +30,23 @@
         </div>
     </div>
 </nav>
+
+<div class="container-fluid">
+
+    <div class="row">
+
+        {% include "_sidemenu.html" %}
+        {% include "_flash_messages.html" %}
+
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+
+            {% include "_featured.html" %}
+
+            {% block content %}
+	        {% endblock %}
+
+        </div>
+    </div>
+</div>
+
+{% endblock %}
