--- a/src/inventoryapp/templates/form_delete_recipe.html
+++ b/src/inventoryapp/templates/form_delete_recipe.html
@@ -1,27 +1,27 @@
-{% extends "main.html" %}
-{% block content %}
-{% include "header.html" %}
+{% extends "_header.html" %}
 {% from "_formhelpers.html" import render_field %}
-
+{% block content %}
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
-    <form action="{{ url_for('new_category')}}" method=post>
-    {{ form.hidden_tag() }}
+    <form action="{{ url_for('delete_recipe', recipe_id=recipe.id)}}" method=post>
+        {{ form.hidden_tag() }}
         <div class="row">
-            <div class="subtitle"><h3>Add Category</h3></div>
+            <div class="subtitle"><h3>Delete {{'"{}"'.format(recipe.name)}}</h3></div>
+            <br>
             <div class="col-md-6 padding-top">
                 <dl>
-                    {{ render_field(form.name) }}
+                    {{ render_field(form.confirm_delete) }}
                 </dl>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6 padding-top">
-                <input type=submit value=Save>
+                {{ form.submit }}
             </div>
         </div>
     </form>
 </div>
+
 
 {% endblock %}
