--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -1,19 +1,6 @@
-{% extends "_main.html" %}
+{% extends "_header.html" %}
+
 {% block content %}
-{% include "_header.html" %}
-
-
-<div class="container-fluid">
-
-    <div class="row">
-
-        {% include "_sidemenu.html" %}
-
-
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            {% include "_flash_messages.html" %}
-            <h1 class="page-header">Recipe Catalog</h1>
-            {% include "_featured.html" %}
 
             <h2 class="sub-header">{{subtitle}}</h2>
             <div class="table-responsive">
@@ -42,9 +29,5 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-    </div>
-</div>
-
 
 {% endblock %}
