--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -1,33 +1,42 @@
 {% extends "_header.html" %}
-
 {% block content %}
 
-            <h2 class="sub-header">{{subtitle}}</h2>
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Dish Name</th>
-                        <th>Category</th>
-                        <th>Author</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for r in recipes %}
-                    <tr>
-                        <td>#</td>
-                        <td><a href="{{url_for('recipe_detail', recipe_id=r.id)}}"> {{r.name}} </a></td>
-                        <td> {{r.category.name}}</td>
-                        <td>{{r.user.name|truncate(16)}}</td>
-                        <td>
-                            <a class="btn btn-default" href="{{url_for('edit_recipe', recipe_id=r.id)}}">Edit </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+<div class="row text-center">
+<div class="col-md-12 padding-top">
+    {% if current_user.is_authenticated() %}
+    <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="edit-item">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Recipe
+    </a>
+    {% endif %}
+</div>
+</div>
+
+<h2 class="sub-header">{{subtitle}}</h2>
+<div class="table-responsive">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>#</th>
+            <th>Dish Name</th>
+            <th>Category</th>
+            <th>Author</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for r in recipes %}
+        <tr>
+            <td>#</td>
+            <td><a href="{{url_for('recipe_detail', recipe_id=r.id)}}"> {{r.name}} </a></td>
+            <td> {{r.category.name}}</td>
+            <td> {{r.user.name|truncate(16)}}</td>
+            <td>
+                <a class="btn btn-default" href="{{url_for('edit_recipe', recipe_id=r.id)}}">Edit </a>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
