--- a/src/inventoryapp/templates/form_delete_recipe.html
+++ b/src/inventoryapp/templates/form_delete_recipe.html
@@ -17,7 +17,10 @@
 
         <div class="row">
             <div class="col-md-6 padding-top">
-                {{ form.submit }}
+                <input type=submit value="Delete" class="btn btn-default">
+                <a href="{{ url_for('recipe_detail', recipe_id=recipe.id)}}" class="btn btn-default" id="edit-item">
+                Cancel
+                </a>
             </div>
         </div>
     </form>
