--- a/src/inventoryapp/templates/recipe_detail.html
+++ b/src/inventoryapp/templates/recipe_detail.html
@@ -4,10 +4,10 @@
 <div class="row text-center">
 <div class="col-md-12 padding-top">
     {% if current_user.is_authenticated() %}
-    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-default" id="edit_item">
+    <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn btn-default" id="edit-item">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit
     </a>
-    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn btn-default" id="delete_item">
+    <a href="{{ url_for('delete_recipe', recipe_id=recipe.id) }}" class="btn btn-default" id="delete-item">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete
     </a>
     {% endif %}
