--- a/src/inventoryapp/static/dashboard.css
+++ b/src/inventoryapp/static/dashboard.css
@@ -88,6 +88,14 @@ ul.error-flash {
     background-color: #428bca;
 }
 
+textarea.recipe-instructions {
+    -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+
+	width: 100%;
+    height: 400px;
+}
 
 /*
  * Main content
