Fix bug when adding new recipe

--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -7,6 +7,9 @@
     <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="edit-item">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Recipe
     </a>
+    <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="add-category">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Category
+    </a>
     {% endif %}
 </div>
 </div>
