--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -29,7 +29,7 @@
         <tbody>
         {% for r in recipes %}
         <tr>
-            <td>#</td>
+            <td>{{loop.index}}</td>
             <td><a href="{{url_for('recipe_detail', recipe_id=r.id)}}"> {{r.name}} </a></td>
             <td> {{r.category.name}}</td>
             <td> {{r.user.name|truncate(16)}}</td>
