--- a/src/inventoryapp/templates/_formhelpers.html
+++ b/src/inventoryapp/templates/_formhelpers.html
@@ -1,13 +1,24 @@
 <!-- Snippet taken from Flask-WTF documentation -->
-{% macro render_field(field) %}
+{% macro render_field_list(field) %}
   <dt>{{ field.label }}
   <dd>{{ field(**kwargs)|safe }}
   {% if field.errors %}
-    <ul class=errors>
+    <ul class="field-errors">
     {% for error in field.errors %}
       <li>{{ error }}</li>
     {% endfor %}
     </ul>
   {% endif %}
   </dd>
+{% endmacro %}
+
+{% macro render_field_only(field) %}
+  {{ field(**kwargs)|safe }}
+  {% if field.errors %}
+      <ul class="field-errors">
+          {% for error in field.errors %}
+              <li>{{ error }}</li>
+          {% endfor %}
+      </ul>
+  {% endif %}
 {% endmacro %}
