--- a/src/inventoryapp/templates/form_edit_recipe.html
+++ b/src/inventoryapp/templates/form_edit_recipe.html
@@ -1,5 +1,5 @@
 {% extends "_header.html" %}
-{% from "_formhelpers.html" import render_field %}
+{% from "_formhelpers.html" import render_field_list %}
 {% block content %}
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
@@ -14,10 +14,10 @@
 
         <div class="row">
             <div class="col-md-2 padding-top">
-                {{ render_field(form.name) }}
+                {{ render_field_list(form.name) }}
             </div>
             <div class="col-md-2 padding-top">
-                {{ render_field(form.category) }}
+                {{ render_field_list(form.category) }}
             </div>
         </div>
 
@@ -25,7 +25,7 @@
             <br>
             <div class="col-md-6 padding-top">
             <dl>
-                {{ render_field(form.description, class='recipe-instructions') }}
+                {{ render_field_list(form.description, class='recipe-instructions') }}
             </dl>
             </div>
         </div>
