--- a/src/inventoryapp/templates/form_new_category.html
+++ b/src/inventoryapp/templates/form_new_category.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-{% from "_formhelpers.html" import render_field %}
+{% from "_formhelpers.html" import render_field_list %}
 
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
@@ -11,7 +11,7 @@
             <div class="subtitle"><h3>Add Category</h3></div>
             <div class="col-md-6 padding-top">
                 <dl>
-                    {{ render_field(form.name) }}
+                    {{ render_field_list(form.name) }}
                 </dl>
             </div>
         </div>
