--- a/src/inventoryapp/templates/_header.html
+++ b/src/inventoryapp/templates/_header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{url_for('index')}}">Catalog</a>
+            <a class="navbar-brand" href="{{url_for('index')}}">Recipe Catalog</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
