--- a/src/inventoryapp/templates/_main.html
+++ b/src/inventoryapp/templates/_main.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster+Two:700italic' rel='stylesheet' type='text/css'>
 
     <title>{% if title is defined %} {{ title }} {% else %} Catalog {% endif %}</title>
 
