--- a/src/inventoryapp/templates/_sidemenu.html
+++ b/src/inventoryapp/templates/_sidemenu.html
@@ -1,10 +1,11 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li ><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Reports</a></li>
+        <li ><a href="{{url_for('index')}}">All Recipes <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="{{url_for('index')}}">By Category</a></li>
         <li><a href="#">Analytics</a></li>
         <li><a href="#">Export</a></li>
     </ul>
+    <!--
     <ul class="nav nav-sidebar">
         <li><a href="">Nav item</a></li>
         <li><a href="">Nav item again</a></li>
@@ -17,4 +18,5 @@
         <li><a href="">One more nav</a></li>
         <li><a href="">Another nav item</a></li>
     </ul>
+    -->
 </div>
