--- a/src/inventoryapp/templates/form_new_recipe.html
+++ b/src/inventoryapp/templates/form_new_recipe.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
-    <form action="{{ url_for('new_recipe')}}" method=post>
+    <form action="{{ url_for('new_recipe')}}" method="POST" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
         <div class="row">
             <div class="col-md-12 padding-top">
@@ -18,6 +18,9 @@
             </div>
             <div class="col-md-2 padding-top">
             {{ render_field_list(form.category) }}
+            </div>
+            <div class="col-md-2 padding-top">
+            {{ render_field_list(form.photo) }}
             </div>
         </div>
 
