Implement photo display on details page and JSON endpoints

--- a/src/inventoryapp/static/dashboard.css
+++ b/src/inventoryapp/static/dashboard.css
@@ -146,6 +146,10 @@ p.footnote {
     font-size: 80%;
 }
 
+div.recipe-image {
+    padding-top: 20px;
+}
+
 /*
  * Placeholder dashboard ideas
  */
