--- a/src/inventoryapp/templates/form_edit_recipe.html
+++ b/src/inventoryapp/templates/form_edit_recipe.html
@@ -3,41 +3,60 @@
 {% block content %}
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
-    <form action="{{ url_for('edit_recipe', recipe_id=recipe.id)}}" method=post>
+    <form action="{{ url_for('edit_recipe', recipe_id=recipe.id)}}" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
 
         <div class="row">
             <div class="col-md-6 padding-top">
-                <div class="subtitle"><h3>Edit Recipe</h3></div>
+                <div class="row">
+                    <div class="col-md-12 padding-top">
+                        <div class="subtitle"><h3>Edit Recipe</h3></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4 padding-top">
+                        {{ render_field_list(form.name) }}
+                    </div>
+                    <div class="col-md-4 padding-top">
+                        {{ render_field_list(form.category, class="btn btn-default") }}
+                    </div>
+                    <div class="col-md-3 padding-top">
+                        {{ render_field_list(form.photo) }}
+
+                         <a href="{{ url_for('delete_photo', recipe_id=recipe.id)}}">
+                             Delete photo
+                         </a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 padding-top">
+                        <dl>
+                            {{ render_field_list(form.description, class='recipe-instructions') }}
+                        </dl>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 padding-top">
+                        <input type=submit value="Save" class="btn btn-default">
+                        <a href="{{ url_for('recipe_detail', recipe_id=recipe.id)}}" class="btn btn-default" id="edit-item">
+                        Cancel
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 padding-top text-center">
+                {% if photo|length > 0: %}
+                    <div class="recipe-image">
+                        <img class="img-responsive img-rounded" src="data:image/jpeg;base64,{{photo}}">
+                    </div>
+                {% endif %}
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-2 padding-top">
-                {{ render_field_list(form.name) }}
-            </div>
-            <div class="col-md-2 padding-top">
-                {{ render_field_list(form.category) }}
-            </div>
-        </div>
-
-        <div class="row">
-            <br>
-            <div class="col-md-6 padding-top">
-            <dl>
-                {{ render_field_list(form.description, class='recipe-instructions') }}
-            </dl>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 padding-top">
-                <input type=submit value="Save" class="btn btn-default">
-                <a href="{{ url_for('recipe_detail', recipe_id=recipe.id)}}" class="btn btn-default" id="edit-item">
-                Cancel
-                </a>
-            </div>
-        </div>
     </form>
 </div>
 
