--- a/src/inventoryapp/templates/_sidemenu.html
+++ b/src/inventoryapp/templates/_sidemenu.html
@@ -1,7 +1,7 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
         <li ><a href="{{url_for('index')}}">All Recipes <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="{{url_for('index')}}">By Category</a></li>
+        <li class="active"><a href="{{url_for('index')}}">By Cuisine</a></li>
         <li><a href="#">Analytics</a></li>
         <li><a href="#">Export</a></li>
     </ul>
