--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -7,8 +7,8 @@
     <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="edit-item">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Recipe
     </a>
-    <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="add-category">
-        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Category
+    <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="add-cuisine">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Cuisine
     </a>
     {% endif %}
 </div>
@@ -21,7 +21,7 @@
         <tr>
             <th>#</th>
             <th>Dish Name</th>
-            <th>Category</th>
+            <th>Cuisine</th>
             <th>Author</th>
             <th>Actions</th>
         </tr>
