--- a/src/inventoryapp/templates/_featured.html
+++ b/src/inventoryapp/templates/_featured.html
@@ -2,14 +2,12 @@
     <div class="col-xs-6 col-sm-3 placeholder">
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-        <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
+        <h1 class="featured">{{stats.recipes}}</h1>
+        <span class="text-muted">Recipes</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-        <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
+        <h1 class="featured">{{stats.categories}}</h1>
+        <span class="text-muted">Cuisines</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
     </div>
