--- a/src/inventoryapp/templates/_main_recipe_table.html
+++ b/src/inventoryapp/templates/_main_recipe_table.html
@@ -4,7 +4,7 @@
         <tr>
             <th>#</th>
             <th>Dish Name</th>
-            <th>Category</th>
+            <th>Cuisine</th>
             <th>Author</th>
             <th>Actions</th>
         </tr>
