--- a/src/inventoryapp/templates/form_new_category.html
+++ b/src/inventoryapp/templates/form_new_category.html
@@ -6,7 +6,7 @@
     <form action="{{ url_for('new_category')}}" method=post>
     {{ form.hidden_tag() }}
         <div class="row">
-            <div class="subtitle"><h3>Add Category</h3></div>
+            <div class="subtitle"><h3>Add Cuisine</h3></div>
             <div class="col-md-6 padding-top">
                 <dl>
                     {{ render_field_list(form.name) }}
