Enable adding cuisines

--- a/src/inventoryapp/templates/index.html
+++ b/src/inventoryapp/templates/index.html
@@ -7,7 +7,7 @@
     <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="edit-item">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Recipe
     </a>
-    <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="add-cuisine">
+    <a href="{{ url_for('new_category') }}" class="btn btn-default" id="add-cuisine">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Add Cuisine
     </a>
     {% endif %}
