--- a/src/inventoryapp/static/dashboard.css
+++ b/src/inventoryapp/static/dashboard.css
@@ -139,6 +139,7 @@ textarea.recipe-instructions {
 .main {
     padding: 20px;
 }
+
 @media (min-width: 768px) {
     .main {
         padding-right: 40px;
@@ -156,8 +157,12 @@ p.footnote {
 
 div.recipe-image {
     padding-top: 20px;
+    padding-left: 10px;
 }
 
+input.choose-file {
+    width:100%;
+}
 /*
  * Placeholder dashboard ideas
  */
