--- a/src/inventoryapp/templates/_sidemenu.html
+++ b/src/inventoryapp/templates/_sidemenu.html
@@ -1,18 +1,28 @@
 <div class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
         <li ><a href="{{url_for('index')}}">All Recipes <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="{{url_for('index')}}">By Cuisine</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
+        <li><a href="{{url_for('recent_feed')}}">RSS Feed</a></li>
+
+    </ul>
+
+    <ul class="nav nav-sidebar">
+
+        {% if current_user.is_authenticated() %}
+
+        <li>
+            <a href="{{ url_for('new_recipe') }}" class="btn btn-default" id="edit-item">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Recipe
+            </a>
+        </li>
+        <li>
+            <a href="{{ url_for('new_category') }}" class="btn btn-default" id="add-cuisine">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Cuisine
+            </a>
+        </li>
+
+        {% endif %}
     </ul>
     <!--
-    <ul class="nav nav-sidebar">
-        <li><a href="">Nav item</a></li>
-        <li><a href="">Nav item again</a></li>
-        <li><a href="">One more nav</a></li>
-        <li><a href="">Another nav item</a></li>
-        <li><a href="">More navigation</a></li>
-    </ul>
     <ul class="nav nav-sidebar">
         <li><a href="">Nav item again</a></li>
         <li><a href="">One more nav</a></li>
