--- a/src/inventoryapp/templates/form_edit_recipe.html
+++ b/src/inventoryapp/templates/form_edit_recipe.html
@@ -15,14 +15,15 @@
                 </div>
 
                 <div class="row">
+                    <dl>
                     <div class="col-md-4 padding-top">
                         {{ render_field_list(form.name) }}
                     </div>
                     <div class="col-md-4 padding-top">
                         {{ render_field_list(form.category, class="btn btn-default") }}
                     </div>
-                    <div class="col-md-3 padding-top">
-                        {{ render_field_list(form.photo) }}
+                    <div class="col-md-4 padding-top">
+                        {{ render_field_list(form.photo, class="choose-file") }}
 
                         {% if photo|length > 0: %}
                          <a href="{{ url_for('delete_photo', recipe_id=recipe.id)}}">
@@ -30,6 +31,7 @@
                          </a>
                         {% endif %}
                     </div>
+                    </dl>
                 </div>
 
                 <div class="row">
