--- a/src/inventoryapp/templates/form_new_recipe.html
+++ b/src/inventoryapp/templates/form_new_recipe.html
@@ -20,7 +20,7 @@
                 {{ render_field_list(form.category, class="btn btn-default") }}
             </div>
             <div class="col-md-2 padding-top">
-                {{ render_field_list(form.photo) }}
+                {{ render_field_list(form.photo, class="choose-file") }}
             </div>
         </div>
 
