--- a/src/catalogapp/templates/_cuisines_table.html
+++ b/src/catalogapp/templates/_cuisines_table.html
@@ -3,22 +3,14 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>Dish Name</th>
-            <th>Cuisine</th>
-            <th>Author</th>
-            <th>Actions</th>
+            <th>Cuisine Type</th>
         </tr>
         </thead>
         <tbody>
-        {% for r in recipes %}
+        {% for c in cuisines %}
         <tr>
             <td>{{loop.index}}</td>
-            <td><a href="{{url_for('recipe_detail', recipe_id=r.id)}}"> {{r.name}} </a></td>
-            <td> {{r.category.name}}</td>
-            <td> {{r.user.name|truncate(16)}}</td>
-            <td>
-                <a class="btn btn-default" href="{{url_for('edit_recipe', recipe_id=r.id)}}">Edit </a>
-            </td>
+            <td><a href="{{ url_for('cuisine', cuisine_id=c.id) }}"> {{c.name}} </a></td>
         </tr>
         {% endfor %}
         </tbody>
