--- a/src/catalogapp/templates/_featured.html
+++ b/src/catalogapp/templates/_featured.html
@@ -6,7 +6,7 @@
         <span class="text-muted">Recipes</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
-        <h1 class="featured">{{stats.categories}}</h1>
+        <h1 class="featured">{{stats.cuisines}}</h1>
         <span class="text-muted">Cuisines</span>
     </div>
     <div class="col-xs-6 col-sm-3 placeholder">
