--- a/src/catalogapp/templates/_main_recipe_table.html
+++ b/src/catalogapp/templates/_main_recipe_table.html
@@ -12,10 +12,10 @@
         <tbody>
         {% for r in recipes %}
         <tr>
-            <td>#</td>
+            <td>{{loop.index}}</td>
             <td><a href="{{url_for('recipe_detail', recipe_id=r.id)}}"> {{r.name}} </a></td>
             <td> {{r.category.name}}</td>
-            <td>{{r.user.name|truncate(16)}}</td>
+            <td> {{r.user.name|truncate(16)}}</td>
             <td>
                 <a class="btn btn-default" href="{{url_for('edit_recipe', recipe_id=r.id)}}">Edit </a>
             </td>
