--- a/src/catalogapp/templates/form_new_category.html
+++ b/src/catalogapp/templates/form_new_category.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="form-group" xmlns="http://www.w3.org/1999/html">
-    <form action="{{ url_for('new_category')}}" method=post>
+    <form action="{{ url_for('new_cuisine')}}" method=post>
     {{ form.hidden_tag() }}
         <div class="row">
             <div class="subtitle"><h3>Add Cuisine</h3></div>
@@ -18,7 +18,7 @@
 
         <div class="row">
             <div class="col-md-6 padding-top">
-                <input type=submit value=Save>
+                <input type=submit value="Save" class="btn btn-default">
             </div>
         </div>
     </form>
