--- a/src/catalogapp/templates/form_edit_recipe.html
+++ b/src/catalogapp/templates/form_edit_recipe.html
@@ -20,7 +20,7 @@
                         {{ render_field_list(form.name) }}
                     </div>
                     <div class="col-md-4 padding-top">
-                        {{ render_field_list(form.category, class="btn btn-default") }}
+                        {{ render_field_list(form.cuisine, class="btn btn-default") }}
                     </div>
                     <div class="col-md-4 padding-top">
                         {{ render_field_list(form.photo, class="choose-file") }}
