--- a/src/catalogapp/templates/form_new_recipe.html
+++ b/src/catalogapp/templates/form_new_recipe.html
@@ -17,7 +17,7 @@
                 {{ render_field_list(form.name, placeholder='Muffuletta Calzones') }}
             </div>
             <div class="col-md-2 padding-top">
-                {{ render_field_list(form.category, class="btn btn-default") }}
+                {{ render_field_list(form.cuisine, class="btn btn-default") }}
             </div>
             <div class="col-md-2 padding-top">
                 {{ render_field_list(form.photo, class="choose-file") }}
