--- a/src/catalogapp/templates/recipe_detail.html
+++ b/src/catalogapp/templates/recipe_detail.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="row">
-            <p class="footnote">Filed under: <a href="{{ url_for('cuisine', cuisine_id=recipe.category.id) }}">{{ recipe.category.name }}</a></p>
+            <p class="footnote">Filed under: <a href="{{ url_for('cuisine', cuisine_id=recipe.cuisine.id) }}">{{ recipe.cuisine.name }}</a></p>
             <p class="footnote">Date added: {{ recipe.created_at.strftime('%A, %B %-d, %Y') }}</p>
         </div>
     </div>
